[gd_scene load_steps=21 format=3 uid="uid://mebxfx4aetic"]

[ext_resource type="Script" path="res://scenes/ui/ability_upgrade_card.gd" id="1_p5xm2"]
[ext_resource type="PackedScene" uid="uid://nn4ef46yt1w6" path="res://scenes/component/random_stream_player_component.tscn" id="2_gv6ch"]
[ext_resource type="AudioStream" uid="uid://dlrnurc803gx0" path="res://assets/audio/switch1.ogg" id="3_1ayej"]
[ext_resource type="AudioStream" uid="uid://bi66grxx8ymb1" path="res://assets/audio/switch2.ogg" id="4_bilg7"]
[ext_resource type="AudioStream" uid="uid://8ajq88m4dtye" path="res://assets/audio/switch3.ogg" id="5_0fms0"]
[ext_resource type="AudioStream" uid="uid://bdxiqqn5dm3xj" path="res://assets/audio/switch4.ogg" id="6_g6lvr"]
[ext_resource type="AudioStream" uid="uid://cobx54qoxymw4" path="res://assets/audio/switch5.ogg" id="7_54t5x"]
[ext_resource type="AudioStream" uid="uid://cnv4kdgu07kcf" path="res://assets/audio/switch6.ogg" id="8_dqel4"]
[ext_resource type="AudioStream" uid="uid://bd7lk07ejewqr" path="res://assets/audio/switch7.ogg" id="9_s5cjy"]
[ext_resource type="AudioStream" uid="uid://dhxi56i2thvov" path="res://assets/audio/switch8.ogg" id="10_ssp31"]
[ext_resource type="AudioStream" uid="uid://bj76p367ncknx" path="res://assets/audio/switch9.ogg" id="11_tfx3r"]
[ext_resource type="AudioStream" uid="uid://utgmh1psecid" path="res://assets/audio/switch10.ogg" id="12_qj6c0"]

[sub_resource type="Animation" id="Animation_bs8v7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_t265j"]
resource_name = "discard"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_mg1d2"]
resource_name = "in"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1.2, 1.2), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_sf0b0"]
resource_name = "selected"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.4),
"transitions": PackedFloat32Array(1, 2.14355, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.174533, 0.0872665, 0.0]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CilckPlayerComponent")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_random"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ua3ay"]
_data = {
"RESET": SubResource("Animation_bs8v7"),
"discard": SubResource("Animation_t265j"),
"in": SubResource("Animation_mg1d2"),
"selected": SubResource("Animation_sf0b0")
}

[sub_resource type="Animation" id="Animation_tpc0j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_04avh"]
resource_name = "hover"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.0872665, 0.0872665, 0.0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HoverPlayerComponent")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_random"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j6uvp"]
_data = {
"RESET": SubResource("Animation_tpc0j"),
"hover": SubResource("Animation_04avh")
}

[node name="AbilityUpgradeCard" type="PanelContainer" groups=["upgrade_card"]]
custom_minimum_size = Vector2(120, 160)
offset_right = 120.0
offset_bottom = 160.0
pivot_offset = Vector2(60, 80)
script = ExtResource("1_p5xm2")

[node name="HoverPlayerComponent" parent="." instance=ExtResource("2_gv6ch")]
volume_db = -8.0
streams = Array[AudioStream]([ExtResource("3_1ayej"), ExtResource("4_bilg7"), ExtResource("5_0fms0"), ExtResource("6_g6lvr"), ExtResource("7_54t5x"), ExtResource("8_dqel4"), ExtResource("9_s5cjy"), ExtResource("10_ssp31"), ExtResource("11_tfx3r"), ExtResource("12_qj6c0")])

[node name="CilckPlayerComponent" parent="." instance=ExtResource("2_gv6ch")]
streams = Array[AudioStream]([ExtResource("3_1ayej"), ExtResource("4_bilg7"), ExtResource("5_0fms0"), ExtResource("6_g6lvr"), ExtResource("7_54t5x"), ExtResource("8_dqel4"), ExtResource("9_s5cjy"), ExtResource("10_ssp31"), ExtResource("11_tfx3r"), ExtResource("12_qj6c0")])

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ua3ay")
}

[node name="HoverAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_j6uvp")
}

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 12

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"AlternatePanelContainer"

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
theme_override_font_sizes/font_size = 16
text = "Test Name"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="DescLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
text = "Upgrade Description
"
vertical_alignment = 1
autowrap_mode = 3
